Update 187.Repeated DNA Sequences.md

--- a/187.Repeated DNA Sequences.md
+++ b/187.Repeated DNA Sequences.md
@@ -26,7 +26,10 @@ class Solution {
                 more.add(s.substring(i, i + 10));
         }
         
-        return new LinkedList<String>(more);        
+        return new LinkedList<String>(more);      
+        
+        //return new LinkedList<>(more);
+        //return new LinkedList(more);
     }
 }
 ```
